responde a endpoint raiz /

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST = localhost
-DATABASE = inventario
-USER = root
-PASSWORD = ""
+HOST = bgxl7l6ub9anid9s1lwn-mysql.services.clever-cloud.com
+DATABASE = bgxl7l6ub9anid9s1lwn
+USER = uzmqtp2ai8vyunjc
+PASSWORD = lPDy60u3ywnBxs5VMHmY
